src/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    ESTRUCTURA
    LLAVDER
    LLAVIZQ
    MUTABLE

Grammar

Rule 0     S' -> init
Rule 1     init -> instrucciones
Rule 2     instrucciones -> instrucciones instruccion
Rule 3     instrucciones -> instruccion
Rule 4     instruccion -> imprimir_instr
Rule 5     instruccion -> definicion_instr
Rule 6     instruccion -> asignacion_instr
Rule 7     instruccion -> mientras_instr
Rule 8     instruccion -> if_instr
Rule 9     instruccion -> if_else_instr
Rule 10    instruccion -> if_elseif_instr
Rule 11    instruccion -> funcion_instr
Rule 12    instruccion -> llamada_funcion_instr PTCOMA
Rule 13    instruccion -> retorno_inst
Rule 14    instruccion -> break_inst
Rule 15    instruccion -> continue_inst
Rule 16    instruccion -> for_instr
Rule 17    imprimir_instr -> IMPRIMIR PARIZQ expresion PARDER PTCOMA
Rule 18    imprimir_instr -> IMPRIMIRSALTO PARIZQ expresion PARDER PTCOMA
Rule 19    imprimir_instr -> IMPRIMIR PARIZQ l_exp PARDER PTCOMA
Rule 20    imprimir_instr -> IMPRIMIRSALTO PARIZQ l_exp PARDER PTCOMA
Rule 21    retorno_inst -> RETORNO expresion PTCOMA
Rule 22    retorno_inst -> RETORNO PTCOMA
Rule 23    break_inst -> BREAK PTCOMA
Rule 24    continue_inst -> CONTINUE PTCOMA
Rule 25    definicion_instr -> LOCAL asignacion_instr
Rule 26    definicion_instr -> GLOBAL asignacion_instr
Rule 27    asignacion_instr -> ID IGUAL expresion PTCOMA
Rule 28    asignacion_instr -> ID IGUAL expresion DOSPT tipo_var PTCOMA
Rule 29    asignacion_instr -> ID CORIZQ expresion CORDER IGUAL expresion PTCOMA
Rule 30    asignacion_instr -> ID CORIZQ expresion CORDER CORIZQ expresion CORDER IGUAL expresion PTCOMA
Rule 31    asignacion_instr -> ID CORIZQ expresion CORDER CORIZQ expresion CORDER CORIZQ expresion CORDER IGUAL expresion PTCOMA
Rule 32    tipo_var -> ENTERO64
Rule 33    tipo_var -> DECIMAL64
Rule 34    tipo_var -> BOOLEANO
Rule 35    tipo_var -> CHAR
Rule 36    tipo_var -> STRING
Rule 37    mientras_instr -> MIENTRAS expresion_logica instrucciones END PTCOMA
Rule 38    for_instr -> FOR ID IN expresion PUNTOS expresion instrucciones END PTCOMA
Rule 39    for_instr -> FOR ID IN expresion instrucciones END PTCOMA
Rule 40    if_instr -> IF expresion_logica instrucciones END PTCOMA
Rule 41    if_else_instr -> IF expresion_logica instrucciones ELSE instrucciones END PTCOMA
Rule 42    if_elseif_instr -> lista_elif
Rule 43    lista_elif -> lista_elif ELSEIF expresion_logica instrucciones ELSE instrucciones END PTCOMA
Rule 44    lista_elif -> IF expresion_logica instrucciones
Rule 45    lista_elif -> lista_elif ELSEIF expresion_logica instrucciones END PTCOMA
Rule 46    lista_elif -> lista_elif ELSEIF expresion_logica instrucciones
Rule 47    l_exp -> l_exp COMA expresion
Rule 48    l_exp -> expresion
Rule 49    funcion_instr -> FUNC ID PARIZQ PARDER instrucciones END PTCOMA
Rule 50    funcion_instr -> FUNC ID PARIZQ parametros PARDER instrucciones END PTCOMA
Rule 51    llamada_funcion_instr -> ID PARIZQ PARDER
Rule 52    llamada_funcion_instr -> ID PARIZQ l_exp PARDER
Rule 53    parametros -> parametros COMA ID
Rule 54    parametros -> ID
Rule 55    expresion_numerica -> expresion_numerica MAS expresion_numerica
Rule 56    expresion_numerica -> expresion_numerica MENOS expresion_numerica
Rule 57    expresion_numerica -> expresion_numerica POR expresion_numerica
Rule 58    expresion_numerica -> expresion_numerica POR expresion
Rule 59    expresion_numerica -> expresion_numerica DIVIDIDO expresion_numerica
Rule 60    expresion_numerica -> len_inst MAS expresion_numerica
Rule 61    expresion_numerica -> len_inst MENOS expresion_numerica
Rule 62    expresion_numerica -> len_inst POR expresion_numerica
Rule 63    expresion_numerica -> len_inst POR expresion
Rule 64    expresion_numerica -> len_inst DIVIDIDO expresion_numerica
Rule 65    expresion_numerica -> expresion_numerica MOD expresion_numerica
Rule 66    expresion_numerica -> expresion_numerica POTENCIA expresion_numerica
Rule 67    expresion_numerica -> LOG10 PARIZQ expresion_numerica PARDER
Rule 68    expresion_numerica -> LOG PARIZQ expresion_numerica COMA expresion_numerica PARDER
Rule 69    expresion_numerica -> SEN PARIZQ expresion_numerica PARDER
Rule 70    expresion_numerica -> COS PARIZQ expresion_numerica PARDER
Rule 71    expresion_numerica -> TAN PARIZQ expresion_numerica PARDER
Rule 72    expresion_numerica -> SQRT PARIZQ expresion_numerica PARDER
Rule 73    expresion_numerica -> MENOS expresion_numerica
Rule 74    expresion_numerica -> PARIZQ expresion_numerica PARDER
Rule 75    expresion -> PARIZQ expresion PARDER
Rule 76    expresion_numerica -> ENTERO
Rule 77    expresion_numerica -> DECIMAL
Rule 78    expresion_numerica -> ID
Rule 79    expresion_numerica -> ID CORIZQ expresion CORDER
Rule 80    expresion_numerica -> ID CORIZQ expresion CORDER CORIZQ expresion CORDER
Rule 81    expresion_numerica -> ID CORIZQ expresion CORDER CORIZQ expresion CORDER CORIZQ expresion CORDER
Rule 82    expresion -> CADENA
Rule 83    expresion -> CORIZQ l_exp CORDER
Rule 84    expresion -> CORIZQ l_array_multidimencional CORDER
Rule 85    l_array_multidimencional -> l_array_multidimencional COMA expresion
Rule 86    l_array_multidimencional -> expresion
Rule 87    len_inst -> LEN PARIZQ expresion PARDER
Rule 88    expresion -> UPPER PARIZQ expresion PARDER
Rule 89    expresion -> LOWER PARIZQ expresion PARDER
Rule 90    expresion -> LEN PARIZQ expresion PARDER
Rule 91    expresion -> PARSE PARIZQ tipo_var COMA expresion PARDER
Rule 92    expresion -> TRUNC PARIZQ expresion PARDER
Rule 93    expresion -> R_DECIMAL PARIZQ expresion PARDER
Rule 94    expresion -> STRING PARIZQ expresion PARDER
Rule 95    expresion -> TYPE PARIZQ expresion PARDER
Rule 96    expresion -> PUSH PARIZQ expresion PARDER
Rule 97    expresion -> POP PARIZQ expresion PARDER
Rule 98    expresion -> llamada_funcion_instr
Rule 99    expresion -> CADENA POTENCIA ENTERO
Rule 100   expresion -> CARACTER
Rule 101   expresion -> NULO
Rule 102   expresion -> expresion_numerica
Rule 103   expresion -> expresion_logica
Rule 104   expresion_bool -> FALSO
Rule 105   expresion_bool -> VERDADERO
Rule 106   expresion_numerica -> expresion_bool
Rule 107   expresion_logica -> expresion_logica AND expresion_logica
Rule 108   expresion_logica -> expresion_logica OR expresion_logica
Rule 109   expresion_logica -> NOT expresion_logica
Rule 110   expresion_logica -> expresion_bool AND expresion_bool
Rule 111   expresion_logica -> expresion_bool OR expresion_bool
Rule 112   expresion_logica -> NOT expresion_bool
Rule 113   expresion_logica -> expresion_logica AND expresion_bool
Rule 114   expresion_logica -> expresion_logica OR expresion_bool
Rule 115   expresion_logica -> expresion_bool AND expresion_logica
Rule 116   expresion_logica -> expresion_bool OR expresion_logica
Rule 117   expresion_logica -> PARIZQ expresion_logica PARDER
Rule 118   expresion_logica -> expresion MAYQUE expresion
Rule 119   expresion_logica -> expresion MENQUE expresion
Rule 120   expresion_logica -> expresion IGUALQUE expresion
Rule 121   expresion_logica -> expresion NIGUALQUE expresion
Rule 122   expresion_logica -> expresion MENIGQUE expresion
Rule 123   expresion_logica -> expresion MAYIGQUE expresion
Rule 124   expresion -> expresion POR expresion

Terminals, with rules where they appear

AND                  : 107 110 113 115
BOOLEANO             : 34
BREAK                : 23
CADENA               : 82 99
CARACTER             : 100
CHAR                 : 35
COMA                 : 47 53 68 85 91
CONTINUE             : 24
CORDER               : 29 30 30 31 31 31 79 80 80 81 81 81 83 84
CORIZQ               : 29 30 30 31 31 31 79 80 80 81 81 81 83 84
COS                  : 70
DECIMAL              : 77
DECIMAL64            : 33
DIVIDIDO             : 59 64
DOSPT                : 28
ELSE                 : 41 43
ELSEIF               : 43 45 46
END                  : 37 38 39 40 41 43 45 49 50
ENTERO               : 76 99
ENTERO64             : 32
ESTRUCTURA           : 
FALSO                : 104
FOR                  : 38 39
FUNC                 : 49 50
GLOBAL               : 26
ID                   : 27 28 29 30 31 38 39 49 50 51 52 53 54 78 79 80 81
IF                   : 40 41 44
IGUAL                : 27 28 29 30 31
IGUALQUE             : 120
IMPRIMIR             : 17 19
IMPRIMIRSALTO        : 18 20
IN                   : 38 39
LEN                  : 87 90
LLAVDER              : 
LLAVIZQ              : 
LOCAL                : 25
LOG                  : 68
LOG10                : 67
LOWER                : 89
MAS                  : 55 60
MAYIGQUE             : 123
MAYQUE               : 118
MENIGQUE             : 122
MENOS                : 56 61 73
MENQUE               : 119
MIENTRAS             : 37
MOD                  : 65
MUTABLE              : 
NIGUALQUE            : 121
NOT                  : 109 112
NULO                 : 101
OR                   : 108 111 114 116
PARDER               : 17 18 19 20 49 50 51 52 67 68 69 70 71 72 74 75 87 88 89 90 91 92 93 94 95 96 97 117
PARIZQ               : 17 18 19 20 49 50 51 52 67 68 69 70 71 72 74 75 87 88 89 90 91 92 93 94 95 96 97 117
PARSE                : 91
POP                  : 97
POR                  : 57 58 62 63 124
POTENCIA             : 66 99
PTCOMA               : 12 17 18 19 20 21 22 23 24 27 28 29 30 31 37 38 39 40 41 43 45 49 50
PUNTOS               : 38
PUSH                 : 96
RETORNO              : 21 22
R_DECIMAL            : 93
SEN                  : 69
SQRT                 : 72
STRING               : 36 94
TAN                  : 71
TRUNC                : 92
TYPE                 : 95
UPPER                : 88
VERDADERO            : 105
error                : 

Nonterminals, with rules where they appear

asignacion_instr     : 6 25 26
break_inst           : 14
continue_inst        : 15
definicion_instr     : 5
expresion            : 17 18 21 27 28 29 29 30 30 30 31 31 31 31 38 38 39 47 48 58 63 75 79 80 80 81 81 81 85 86 87 88 89 90 91 92 93 94 95 96 97 118 118 119 119 120 120 121 121 122 122 123 123 124 124
expresion_bool       : 106 110 110 111 111 112 113 114 115 116
expresion_logica     : 37 40 41 43 44 45 46 103 107 107 108 108 109 113 114 115 116 117
expresion_numerica   : 55 55 56 56 57 57 58 59 59 60 61 62 64 65 65 66 66 67 68 68 69 70 71 72 73 74 102
for_instr            : 16
funcion_instr        : 11
if_else_instr        : 9
if_elseif_instr      : 10
if_instr             : 8
imprimir_instr       : 4
init                 : 0
instruccion          : 2 3
instrucciones        : 1 2 37 38 39 40 41 41 43 43 44 45 46 49 50
l_array_multidimencional : 84 85
l_exp                : 19 20 47 52 83
len_inst             : 60 61 62 63 64
lista_elif           : 42 43 45 46
llamada_funcion_instr : 12 98
mientras_instr       : 7
parametros           : 50 53
retorno_inst         : 13
tipo_var             : 28 91

Parsing method: LALR

state 0

    (0) S' -> . init
    (1) init -> . instrucciones
    (2) instrucciones -> . instrucciones instruccion
    (3) instrucciones -> . instruccion
    (4) instruccion -> . imprimir_instr
    (5) instruccion -> . definicion_instr
    (6) instruccion -> . asignacion_instr
    (7) instruccion -> . mientras_instr
    (8) instruccion -> . if_instr
    (9) instruccion -> . if_else_instr
    (10) instruccion -> . if_elseif_instr
    (11) instruccion -> . funcion_instr
    (12) instruccion -> . llamada_funcion_instr PTCOMA
    (13) instruccion -> . retorno_inst
    (14) instruccion -> . break_inst
    (15) instruccion -> . continue_inst
    (16) instruccion -> . for_instr
    (17) imprimir_instr -> . IMPRIMIR PARIZQ expresion PARDER PTCOMA
    (18) imprimir_instr -> . IMPRIMIRSALTO PARIZQ expresion PARDER PTCOMA
    (19) imprimir_instr -> . IMPRIMIR PARIZQ l_exp PARDER PTCOMA
    (20) imprimir_instr -> . IMPRIMIRSALTO PARIZQ l_exp PARDER PTCOMA
    (25) definicion_instr -> . LOCAL asignacion_instr
    (26) definicion_instr -> . GLOBAL asignacion_instr
    (27) asignacion_instr -> . ID IGUAL expresion PTCOMA
    (28) asignacion_instr -> . ID IGUAL expresion DOSPT tipo_var PTCOMA
    (29) asignacion_instr -> . ID CORIZQ expresion CORDER IGUAL expresion PTCOMA
    (30) asignacion_instr -> . ID CORIZQ expresion CORDER CORIZQ expresion CORDER IGUAL expresion PTCOMA
    (31) asignacion_instr -> . ID CORIZQ expresion CORDER CORIZQ expresion CORDER CORIZQ expresion CORDER IGUAL expresion PTCOMA
    (37) mientras_instr -> . MIENTRAS expresion_logica instrucciones END PTCOMA
    (40) if_instr -> . IF expresion_logica instrucciones END PTCOMA
    (41) if_else_instr -> . IF expresion_logica instrucciones ELSE instrucciones END PTCOMA
    (42) if_elseif_instr -> . lista_elif
    (49) funcion_instr -> . FUNC ID PARIZQ PARDER instrucciones END PTCOMA
    (50) funcion_instr -> . FUNC ID PARIZQ parametros PARDER instrucciones END PTCOMA
    (51) llamada_funcion_instr -> . ID PARIZQ PARDER
    (52) llamada_funcion_instr -> . ID PARIZQ l_exp PARDER
    (21) retorno_inst -> . RETORNO expresion PTCOMA
    (22) retorno_inst -> . RETORNO PTCOMA
    (23) break_inst -> . BREAK PTCOMA
    (24) continue_inst -> . CONTINUE PTCOMA
    (38) for_instr -> . FOR ID IN expresion PUNTOS expresion instrucciones END PTCOMA
    (39) for_instr -> . FOR ID IN expresion instrucciones END PTCOMA
    (43) lista_elif -> . lista_elif ELSEIF expresion_logica instrucciones ELSE instrucciones END PTCOMA
    (44) lista_elif -> . IF expresion_logica instrucciones
    (45) lista_elif -> . lista_elif ELSEIF expresion_logica instrucciones END PTCOMA
    (46) lista_elif -> . lista_elif ELSEIF expresion_logica instrucciones

    IMPRIMIR        shift and go to state 17
    IMPRIMIRSALTO   shift and go to state 18
    LOCAL           shift and go to state 19
    GLOBAL          shift and go to state 20
    ID              shift and go to state 21
    MIENTRAS        shift and go to state 22
    IF              shift and go to state 23
    FUNC            shift and go to state 25
    RETORNO         shift and go to state 26
    BREAK           shift and go to state 27
    CONTINUE        shift and go to state 28
    FOR             shift and go to state 29

    init                           shift and go to state 1
    instrucciones                  shift and go to state 2
    instruccion                    shift and go to state 3
    imprimir_instr                 shift and go to state 4
    definicion_instr               shift and go to state 5
    asignacion_instr               shift and go to state 6
    mientras_instr                 shift and go to state 7
    if_instr                       shift and go to state 8
    if_else_instr                  shift and go to state 9
    if_elseif_instr                shift and go to state 10
    funcion_instr                  shift and go to state 11
    llamada_funcion_instr          shift and go to state 12
    retorno_inst                   shift and go to state 13
    break_inst                     shift and go to state 14
    continue_inst                  shift and go to state 15
    for_instr                      shift and go to state 16
    lista_elif                     shift and go to state 24

state 1

    (0) S' -> init .



state 2

    (1) init -> instrucciones .
    (2) instrucciones -> instrucciones . instruccion
    (4) instruccion -> . imprimir_instr
    (5) instruccion -> . definicion_instr
    (6) instruccion -> . asignacion_instr
    (7) instruccion -> . mientras_instr
    (8) instruccion -> . if_instr
    (9) instruccion -> . if_else_instr
    (10) instruccion -> . if_elseif_instr
    (11) instruccion -> . funcion_instr
    (12) instruccion -> . llamada_funcion_instr PTCOMA
    (13) instruccion -> . retorno_inst
    (14) instruccion -> . break_inst
    (15) instruccion -> . continue_inst
    (16) instruccion -> . for_instr
    (17) imprimir_instr -> . IMPRIMIR PARIZQ expresion PARDER PTCOMA
    (18) imprimir_instr -> . IMPRIMIRSALTO PARIZQ expresion PARDER PTCOMA
    (19) imprimir_instr -> . IMPRIMIR PARIZQ l_exp PARDER PTCOMA
    (20) imprimir_instr -> . IMPRIMIRSALTO PARIZQ l_exp PARDER PTCOMA
    (25) definicion_instr -> . LOCAL asignacion_instr
    (26) definicion_instr -> . GLOBAL asignacion_instr
    (27) asignacion_instr -> . ID IGUAL expresion PTCOMA
    (28) asignacion_instr -> . ID IGUAL expresion DOSPT tipo_var PTCOMA
    (29) asignacion_instr -> . ID CORIZQ expresion CORDER IGUAL expresion PTCOMA
    (30) asignacion_instr -> . ID CORIZQ expresion CORDER CORIZQ expresion CORDER IGUAL expresion PTCOMA
    (31) asignacion_instr -> . ID CORIZQ expresion CORDER CORIZQ expresion CORDER CORIZQ expresion CORDER IGUAL expresion PTCOMA
    (37) mientras_instr -> . MIENTRAS expresion_logica instrucciones END PTCOMA
    (40) if_instr -> . IF expresion_logica instrucciones END PTCOMA
    (41) if_else_instr -> . IF expresion_logica instrucciones ELSE instrucciones END PTCOMA
    (42) if_elseif_instr -> . lista_elif
    (49) funcion_instr -> . FUNC ID PARIZQ PARDER instrucciones END PTCOMA
    (50) funcion_instr -> . FUNC ID PARIZQ parametros PARDER instrucciones END PTCOMA
    (51) llamada_funcion_instr -> . ID PARIZQ PARDER
    (52) llamada_funcion_instr -> . ID PARIZQ l_exp PARDER
    (21) retorno_inst -> . RETORNO expresion PTCOMA
    (22) retorno_inst -> . RETORNO PTCOMA
    (23) break_inst -> . BREAK PTCOMA
    (24) continue_inst -> . CONTINUE PTCOMA
    (38) for_instr -> . FOR ID IN expresion PUNTOS expresion instrucciones END PTCOMA
    (39) for_instr -> . FOR ID IN expresion instrucciones END PTCOMA
    (43) lista_elif -> . lista_elif ELSEIF expresion_logica instrucciones ELSE instrucciones END PTCOMA
    (44) lista_elif -> . IF expresion_logica instrucciones
    (45) lista_elif -> . lista_elif ELSEIF expresion_logica instrucciones END PTCOMA
    (46) lista_elif -> . lista_elif ELSEIF expresion_logica instrucciones

    $end            reduce using rule 1 (init -> instrucciones .)
    IMPRIMIR        shift and go to state 17
    IMPRIMIRSALTO   shift and go to state 18
    LOCAL           shift and go to state 19
    GLOBAL          shift and go to state 20
    ID              shift and go to state 21
    MIENTRAS        shift and go to state 22
    IF              shift and go to state 23
    FUNC            shift and go to state 25
    RETORNO         shift and go to state 26
    BREAK           shift and go to state 27
    CONTINUE        shift and go to state 28
    FOR             shift and go to state 29

    instruccion                    shift and go to state 30
    imprimir_instr                 shift and go to state 4
    definicion_instr               shift and go to state 5
    asignacion_instr               shift and go to state 6
    mientras_instr                 shift and go to state 7
    if_instr                       shift and go to state 8
    if_else_instr                  shift and go to state 9
    if_elseif_instr                shift and go to state 10
    funcion_instr                  shift and go to state 11
    llamada_funcion_instr          shift and go to state 12
    retorno_inst                   shift and go to state 13
    break_inst                     shift and go to state 14
    continue_inst                  shift and go to state 15
    for_instr                      shift and go to state 16
    lista_elif                     shift and go to state 24

state 3

    (3) instrucciones -> instruccion .

    IMPRIMIR        reduce using rule 3 (instrucciones -> instruccion .)
    IMPRIMIRSALTO   reduce using rule 3 (instrucciones -> instruccion .)
    LOCAL           reduce using rule 3 (instrucciones -> instruccion .)
    GLOBAL          reduce using rule 3 (instrucciones -> instruccion .)
    ID              reduce using rule 3 (instrucciones -> instruccion .)
    MIENTRAS        reduce using rule 3 (instrucciones -> instruccion .)
    IF              reduce using rule 3 (instrucciones -> instruccion .)
    FUNC            reduce using rule 3 (instrucciones -> instruccion .)
    RETORNO         reduce using rule 3 (instrucciones -> instruccion .)
    BREAK           reduce using rule 3 (instrucciones -> instruccion .)
    CONTINUE        reduce using rule 3 (instrucciones -> instruccion .)
    FOR             reduce using rule 3 (instrucciones -> instruccion .)
    $end            reduce using rule 3 (instrucciones -> instruccion .)
    END             reduce using rule 3 (instrucciones -> instruccion .)
    ELSE            reduce using rule 3 (instrucciones -> instruccion .)
    ELSEIF          reduce using rule 3 (instrucciones -> instruccion .)


state 4

    (4) instruccion -> imprimir_instr .

    IMPRIMIR        reduce using rule 4 (instruccion -> imprimir_instr .)
    IMPRIMIRSALTO   reduce using rule 4 (instruccion -> imprimir_instr .)
    LOCAL           reduce using rule 4 (instruccion -> imprimir_instr .)
    GLOBAL          reduce using rule 4 (instruccion -> imprimir_instr .)
    ID              reduce using rule 4 (instruccion -> imprimir_instr .)
    MIENTRAS        reduce using rule 4 (instruccion -> imprimir_instr .)
    IF              reduce using rule 4 (instruccion -> imprimir_instr .)
    FUNC            reduce using rule 4 (instruccion -> imprimir_instr .)
    RETORNO         reduce using rule 4 (instruccion -> imprimir_instr .)
    BREAK           reduce using rule 4 (instruccion -> imprimir_instr .)
    CONTINUE        reduce using rule 4 (instruccion -> imprimir_instr .)
    FOR             reduce using rule 4 (instruccion -> imprimir_instr .)
    $end            reduce using rule 4 (instruccion -> imprimir_instr .)
    END             reduce using rule 4 (instruccion -> imprimir_instr .)
    ELSE            reduce using rule 4 (instruccion -> imprimir_instr .)
    ELSEIF          reduce using rule 4 (instruccion -> imprimir_instr .)


state 5

    (5) instruccion -> definicion_instr .

    IMPRIMIR        reduce using rule 5 (instruccion -> definicion_instr .)
    IMPRIMIRSALTO   reduce using rule 5 (instruccion -> definicion_instr .)
    LOCAL           reduce using rule 5 (instruccion -> definicion_instr .)
    GLOBAL          reduce using rule 5 (instruccion -> definicion_instr .)
    ID              reduce using rule 5 (instruccion -> definicion_instr .)
    MIENTRAS        reduce using rule 5 (instruccion -> definicion_instr .)
    IF              reduce using rule 5 (instruccion -> definicion_instr .)
    FUNC            reduce using rule 5 (instruccion -> definicion_instr .)
    RETORNO         reduce using rule 5 (instruccion -> definicion_instr .)
    BREAK           reduce using rule 5 (instruccion -> definicion_instr .)
    CONTINUE        reduce using rule 5 (instruccion -> definicion_instr .)
    FOR             reduce using rule 5 (instruccion -> definicion_instr .)
    $end            reduce using rule 5 (instruccion -> definicion_instr .)
    END             reduce using rule 5 (instruccion -> definicion_instr .)
    ELSE            reduce using rule 5 (instruccion -> definicion_instr .)
    ELSEIF          reduce using rule 5 (instruccion -> definicion_instr .)


state 6

    (6) instruccion -> asignacion_instr .

    IMPRIMIR        reduce using rule 6 (instruccion -> asignacion_instr .)
    IMPRIMIRSALTO   reduce using rule 6 (instruccion -> asignacion_instr .)
    LOCAL           reduce using rule 6 (instruccion -> asignacion_instr .)
    GLOBAL          reduce using rule 6 (instruccion -> asignacion_instr .)
    ID              reduce using rule 6 (instruccion -> asignacion_instr .)
    MIENTRAS        reduce using rule 6 (instruccion -> asignacion_instr .)
    IF              reduce using rule 6 (instruccion -> asignacion_instr .)
    FUNC            reduce using rule 6 (instruccion -> asignacion_instr .)
    RETORNO         reduce using rule 6 (instruccion -> asignacion_instr .)
    BREAK           reduce using rule 6 (instruccion -> asignacion_instr .)
    CONTINUE        reduce using rule 6 (instruccion -> asignacion_instr .)
    FOR             reduce using rule 6 (instruccion -> asignacion_instr .)
    $end            reduce using rule 6 (instruccion -> asignacion_instr .)
    END             reduce using rule 6 (instruccion -> asignacion_instr .)
    ELSE            reduce using rule 6 (instruccion -> asignacion_instr .)
    ELSEIF          reduce using rule 6 (instruccion -> asignacion_instr .)


state 7

    (7) instruccion -> mientras_instr .

    IMPRIMIR        reduce using rule 7 (instruccion -> mientras_instr .)
    IMPRIMIRSALTO   reduce using rule 7 (instruccion -> mientras_instr .)
    LOCAL           reduce using rule 7 (instruccion -> mientras_instr .)
    GLOBAL          reduce using rule 7 (instruccion -> mientras_instr .)
    ID              reduce using rule 7 (instruccion -> mientras_instr .)
    MIENTRAS        reduce using rule 7 (instruccion -> mientras_instr .)
    IF              reduce using rule 7 (instruccion -> mientras_instr .)
    FUNC            reduce using rule 7 (instruccion -> mientras_instr .)
    RETORNO         reduce using rule 7 (instruccion -> mientras_instr .)
    BREAK           reduce using rule 7 (instruccion -> mientras_instr .)
    CONTINUE        reduce using rule 7 (instruccion -> mientras_instr .)
    FOR             reduce using rule 7 (instruccion -> mientras_instr .)
    $end            reduce using rule 7 (instruccion -> mientras_instr .)
    END             reduce using rule 7 (instruccion -> mientras_instr .)
    ELSE            reduce using rule 7 (instruccion -> mientras_instr .)
    ELSEIF          reduce using rule 7 (instruccion -> mientras_instr .)


state 8

    (8) instruccion -> if_instr .

    IMPRIMIR        reduce using rule 8 (instruccion -> if_instr .)
    IMPRIMIRSALTO   reduce using rule 8 (instruccion -> if_instr .)
    LOCAL           reduce using rule 8 (instruccion -> if_instr .)
    GLOBAL          reduce using rule 8 (instruccion -> if_instr .)
    ID              reduce using rule 8 (instruccion -> if_instr .)
    MIENTRAS        reduce using rule 8 (instruccion -> if_instr .)
    IF              reduce using rule 8 (instruccion -> if_instr .)
    FUNC            reduce using rule 8 (instruccion -> if_instr .)
    RETORNO         reduce using rule 8 (instruccion -> if_instr .)
    BREAK           reduce using rule 8 (instruccion -> if_instr .)
    CONTINUE        reduce using rule 8 (instruccion -> if_instr .)
    FOR             reduce using rule 8 (instruccion -> if_instr .)
    $end            reduce using rule 8 (instruccion -> if_instr .)
    END             reduce using rule 8 (instruccion -> if_instr .)
    ELSE            reduce using rule 8 (instruccion -> if_instr .)
    ELSEIF          reduce using rule 8 (instruccion -> if_instr .)


state 9

    (9) instruccion -> if_else_instr .

    IMPRIMIR        reduce using rule 9 (instruccion -> if_else_instr .)
    IMPRIMIRSALTO   reduce using rule 9 (instruccion -> if_else_instr .)
    LOCAL           reduce using rule 9 (instruccion -> if_else_instr .)
    GLOBAL          reduce using rule 9 (instruccion -> if_else_instr .)
    ID              reduce using rule 9 (instruccion -> if_else_instr .)
    MIENTRAS        reduce using rule 9 (instruccion -> if_else_instr .)
    IF              reduce using rule 9 (instruccion -> if_else_instr .)
    FUNC            reduce using rule 9 (instruccion -> if_else_instr .)
    RETORNO         reduce using rule 9 (instruccion -> if_else_instr .)
    BREAK           reduce using rule 9 (instruccion -> if_else_instr .)
    CONTINUE        reduce using rule 9 (instruccion -> if_else_instr .)
    FOR             reduce using rule 9 (instruccion -> if_else_instr .)
    $end            reduce using rule 9 (instruccion -> if_else_instr .)
    END             reduce using rule 9 (instruccion -> if_else_instr .)
    ELSE            reduce using rule 9 (instruccion -> if_else_instr .)
    ELSEIF          reduce using rule 9 (instruccion -> if_else_instr .)


state 10

    (10) instruccion -> if_elseif_instr .

    IMPRIMIR        reduce using rule 10 (instruccion -> if_elseif_instr .)
    IMPRIMIRSALTO   reduce using rule 10 (instruccion -> if_elseif_instr .)
    LOCAL           reduce using rule 10 (instruccion -> if_elseif_instr .)
    GLOBAL          reduce using rule 10 (instruccion -> if_elseif_instr .)
    ID              reduce using rule 10 (instruccion -> if_elseif_instr .)
    MIENTRAS        reduce using rule 10 (instruccion -> if_elseif_instr .)
    IF              reduce using rule 10 (instruccion -> if_elseif_instr .)
    FUNC            reduce using rule 10 (instruccion -> if_elseif_instr .)
    RETORNO         reduce using rule 10 (instruccion -> if_elseif_instr .)
    BREAK           reduce using rule 10 (instruccion -> if_elseif_instr .)
    CONTINUE        reduce using rule 10 (instruccion -> if_elseif_instr .)
    FOR             reduce using rule 10 (instruccion -> if_elseif_instr .)
    $end            reduce using rule 10 (instruccion -> if_elseif_instr .)
    END             reduce using rule 10 (instruccion -> if_elseif_instr .)
    ELSE            reduce using rule 10 (instruccion -> if_elseif_instr .)
    ELSEIF          reduce using rule 10 (instruccion -> if_elseif_instr .)


state 11

    (11) instruccion -> funcion_instr .

    IMPRIMIR        reduce using rule 11 (instruccion -> funcion_instr .)
    IMPRIMIRSALTO   reduce using rule 11 (instruccion -> funcion_instr .)
    LOCAL           reduce using rule 11 (instruccion -> funcion_instr .)
    GLOBAL          reduce using rule 11 (instruccion -> funcion_instr .)
    ID              reduce using rule 11 (instruccion -> funcion_instr .)
    MIENTRAS        reduce using rule 11 (instruccion -> funcion_instr .)
    IF              reduce using rule 11 (instruccion -> funcion_instr .)
    FUNC            reduce using rule 11 (instruccion -> funcion_instr .)
    RETORNO         reduce using rule 11 (instruccion -> funcion_instr .)
    BREAK           reduce using rule 11 (instruccion -> funcion_instr .)
    CONTINUE        reduce using rule 11 (instruccion -> funcion_instr .)
    FOR             reduce using rule 11 (instruccion -> funcion_instr .)
    $end            reduce using rule 11 (instruccion -> funcion_instr .)
    END             reduce using rule 11 (instruccion -> funcion_instr .)
    ELSE            reduce using rule 11 (instruccion -> funcion_instr .)
    ELSEIF          reduce using rule 11 (instruccion -> funcion_instr .)


state 12

    (12) instruccion -> llamada_funcion_instr . PTCOMA

    PTCOMA          shift and go to state 31


state 13

    (13) instruccion -> retorno_inst .

    IMPRIMIR        reduce using rule 13 (instruccion -> retorno_inst .)
    IMPRIMIRSALTO   reduce using rule 13 (instruccion -> retorno_inst .)
    LOCAL           reduce using rule 13 (instruccion -> retorno_inst .)
    GLOBAL          reduce using rule 13 (instruccion -> retorno_inst .)
    ID              reduce using rule 13 (instruccion -> retorno_inst .)
    MIENTRAS        reduce using rule 13 (instruccion -> retorno_inst .)
    IF              reduce using rule 13 (instruccion -> retorno_inst .)
    FUNC            reduce using rule 13 (instruccion -> retorno_inst .)
    RETORNO         reduce using rule 13 (instruccion -> retorno_inst .)
    BREAK           reduce using rule 13 (instruccion -> retorno_inst .)
    CONTINUE        reduce using rule 13 (instruccion -> retorno_inst .)
    FOR             reduce using rule 13 (instruccion -> retorno_inst .)
    $end            reduce using rule 13 (instruccion -> retorno_inst .)
    END             reduce using rule 13 (instruccion -> retorno_inst .)
    ELSE            reduce using rule 13 (instruccion -> retorno_inst .)
    ELSEIF          reduce using rule 13 (instruccion -> retorno_inst .)


state 14

    (14) instruccion -> break_inst .
